Fix bug related to nav collapse

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ body>header>nav>div>form>a {
   position: absolute;
   top: 0;
   right: 0;
-  border-top: 12px solid red;
+  border-top: 12px solid #f72210;
   border-left: 10px solid transparent;
   height: 12px;
   width: 70px;
@@ -142,8 +142,8 @@ body>header>nav>div>form>a {
   right: 0px;
   overflow: scroll;
   height: 90vh;
-  /* z-index: 10; 
-  display: none; */
+  z-index: 10; 
+  display: none; 
 }
 
 .navbar-scrolled-down ul span {
